derive/tests/snapshots/foreign_key_with_table_level_index/Shelf/create_shelf.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `shelf` table.
    pub fn create_shelf<'a>(
        &'a self,
    ) -> Result<Shelf, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let shelf = Shelf { id };
        match self.db().shelf().try_insert(shelf.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "shelf".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", shelf.id
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "shelf".into(),
                        })
                    }
                }
            }
        }
    }
}
