derive/tests/snapshots/foreign_key_with_table_level_index/Shelf/get_all_shelves.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `shelf` table.
    pub fn get_all_shelves<'a>(&'a self) -> impl Iterator<Item = Shelf> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().shelf().iter()
    }
}
