derive/tests/snapshots/foreign_key_with_table_level_index/Shelf/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_shelf_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_shelved_book_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_shelved_book_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_shelf_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct ShelfId {
    value: u64,
}
impl Default for ShelfId {
    fn default() -> ShelfId {
        ShelfId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for ShelfId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "ShelfId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for ShelfId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Shelf> for ShelfId {
    fn from(value: &Shelf) -> Self {
        ShelfId { value: value.id.clone() }
    }
}
impl From<&Shelf> for Option<ShelfId> {
    fn from(value: &Shelf) -> Option<ShelfId> {
        Some(ShelfId { value: value.id.clone() })
    }
}
impl From<&ShelfId> for Option<ShelfId> {
    fn from(value: &ShelfId) -> Option<ShelfId> {
        use crate::spacetimedsl::Wrapper;
        Some(ShelfId::new(value.value()))
    }
}
impl From<&ShelfId> for ShelfId {
    fn from(value: &ShelfId) -> Self {
        use crate::spacetimedsl::Wrapper;
        ShelfId::new(value.value())
    }
}
impl Shelf {
    ///
    pub fn get_id(&self) -> ShelfId {
        use crate::spacetimedsl::Wrapper;
        ShelfId::new(self.id.clone())
    }
}

// Generated DSL methods:
// count_of_all_shelves
// create_shelf
// delete_shelf_by_id
// execute_on_delete_strategies_of_referencing_tables_after_multiple_rows_of_the_shelf_table_were_deleted
// execute_on_delete_strategies_of_referencing_tables_after_one_row_of_the_shelf_table_was_deleted
// get_all_shelves
// get_shelf_by_id
